--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <h1>Генератор изображений</h1>
 
   <div class="input-group">
-    <input type="text" id="prompt" placeholder="Что нарисовать? Например: futuristic city at night" />
+    <input type="text" id="prompt" placeholder="Что нарисовать? Например: cyberpunk samurai" />
     <input type="text" id="seed" placeholder="Сид (по умолчанию случайный)" />
     <button onclick="generateImage()">Сгенерировать</button>
   </div>
