--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <input type="text" id="prompt" placeholder="Что нарисовать? Например: cyberpunk samurai" />
     <input type="text" id="seed" placeholder="Сид (по умолчанию случайный)" />
     <button onclick="generateImage()">Сгенерировать</button>
+    <button id="enhanceBtn" onclick="enhanceImage()" disabled>Улучшить</button>
   </div>
 
   <div id="result"></div>
