--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <div class="input-group">
     <input type="text" id="prompt" placeholder="Что нарисовать? Например: cyberpunk samurai" />
     <input type="text" id="seed" placeholder="Сид (по умолчанию случайный)" />
-    <button onclick="generateImage()">Сгенерировать</button>
-    <button id="enhanceBtn" onclick="enhanceImage()" disabled>Улучшить</button>
+    <button id="generateBtn">Сгенерировать</button>
+    <button id="enhanceBtn" disabled>Улучшить</button>
   </div>
 
   <div id="result"></div>
