--- a/index.html
+++ b/index.html
@@ -9,13 +9,18 @@
   <h1>Генератор изображений</h1>
 
   <div class="input-group">
-    <input type="text" id="prompt" placeholder="Что нарисовать? Например: cyberpunk samurai" />
+    <input type="text" id="prompt" placeholder="Что нарисовать?" />
     <input type="text" id="seed" placeholder="Сид (по умолчанию случайный)" />
+    <label><input type="checkbox" id="translate"> на русский</label>
     <button id="generateBtn">Сгенерировать</button>
     <button id="enhanceBtn" disabled>Улучшить</button>
+    <button id="downloadBtn" disabled>Загрузить PNG</button>
   </div>
 
   <div id="result"></div>
+
+  <h2>История</h2>
+  <div id="history"></div>
 
   <script src="script.js"></script>
 </body>
