--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="input-group">
     <input type="text" id="prompt" placeholder="Что нарисовать?" />
     <input type="text" id="seed" placeholder="Сид (по умолчанию случайный)" />
-    <label><input type="checkbox" id="translate"> на русский</label>
+    <label><input type="checkbox" id="translate"> перевести (авто‑русский обнаружение)</label>
     <button id="generateBtn">Сгенерировать</button>
     <button id="enhanceBtn" disabled>Улучшить</button>
     <button id="downloadBtn" disabled>Загрузить PNG</button>
