--- a/index.html
+++ b/index.html
@@ -2,19 +2,16 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8" />
-  <title>Генератор изображений (Pollinations)</title>
+  <title>Генератор изображений</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <h1>Генератор изображений</h1>
-
   <div class="input-group">
     <input type="text" id="prompt" placeholder="Что нарисовать?" />
     <input type="text" id="seed" placeholder="Сид (по умолчанию случайный)" />
-    <label><input type="checkbox" id="translate"> перевести (авто‑русский обнаружение)</label>
     <button id="generateBtn">Сгенерировать</button>
     <button id="enhanceBtn" disabled>Улучшить</button>
-    <button id="downloadBtn" disabled>Загрузить PNG</button>
   </div>
 
   <div id="result"></div>
