--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" href="favicon.ico" type="image/x-icon">.
+  <link rel="icon" href="main/favicon.ico" type="image/x-icon">.
   <link rel="stylesheet" href="main/styles.css" />
 </head>
 <body>
