--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <link rel="icon" href="main/favicon.ico" type="image/x-icon">.
+  <link rel="icon" href="main/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="main/styles.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>AI Image Generator</title>
@@ -45,4 +45,5 @@
 <script src="main/script.js"></script>
 </body>
 </html>
+
 
