--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
         </div>
         
         <div class="form-group">
-          <label for="seed">Сид (необязательно)</label>
+          <label for="seed">Сид</label>
           <input type="text" id="seed" placeholder="Случайный сид">
         </div>
 
         <div class="form-group">
-          <label for="imageUpload">Загрузить изображение (необязательно)</label>
+          <label for="imageUpload">Референс</label>
           <input type="file" id="imageUpload" accept="image/*">
           <div id="imagePreview" class="image-preview" style="display: none;">
             <img id="previewImg" src="" alt="Preview">
@@ -54,6 +54,7 @@
 <script src="main/script.js"></script>
 </body>
 </html>
+
 
 
 
