--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         </div>
 
         <div class="form-group">
-          <label for="imageUpload">Референс</label>
-          <input type="file" id="imageUpload" accept="image/*">
+          <label for="imageUpload" class="img-upload-btn">Референс</label>
+          <input type="file" id="imageUpload" accept="image/*" style="display: none;">
           <div id="imagePreview" class="image-preview" style="display: none;">
             <img id="previewImg" src="" alt="Preview">
             <button type="button" id="removeImage" class="remove-image-btn">×</button>
@@ -54,6 +54,7 @@
 <script src="main/script.js"></script>
 </body>
 </html>
+
 
 
 
