--- a/index.html
+++ b/index.html
@@ -31,41 +31,35 @@
             </button>
             <div id="enhanceMenu" class="enhance-menu">
               <div class="enhance-menu-content">
-                <div class="enhance-option" data-value="high detailed" data-priority="100">
+                <div class="enhance-option" data-value="high detailed, hdr, hyperdetailed" data-priority="100">
                   <div class="enhance-option-preview">
                     <img src="main\img\hd.png" alt="Высокая детализация">
                   </div>
                   <div class="enhance-option-text">Высокая детализация</div>
                 </div>
-                <div class="enhance-option" data-value="anime style" data-priority="20">
+                <div class="enhance-option" data-value="photorealism, extremely detailed, lifelike, realistic:9.4" data-priority="30">
+                  <div class="enhance-option-preview">
+                    <img src="main\img\photorealism.png" alt="Фоторелизм">
+                  </div>
+                  <div class="enhance-option-text">Фоторелизм</div>
+                </div>
+                <div class="enhance-option" data-value="in anime style" data-priority="20">
                   <div class="enhance-option-preview">
                     <img src="main\img\anime.png" alt="Аниме">
                   </div>
                   <div class="enhance-option-text">Аниме</div>
                 </div>
-                <div class="enhance-option" data-value="watercolor style" data-priority="30">
+                <div class="enhance-option" data-value="line drawing, coloring book, b&w, line art" data-priority="10">
                   <div class="enhance-option-preview">
-                    <img src="main\img\anime.png" alt="Раскраска">
+                    <img src="main\img\drawing.png" alt="Раскраска">
                   </div>
                   <div class="enhance-option-text">Раскраска</div>
                 </div>
-                <div class="enhance-option" data-value="photorealistic" data-priority="10">
+                <div class="enhance-option" data-value="epic realistic, pixar style, disney, cycles render, caustics, glossy, artstation, cute" data-priority="40">
                   <div class="enhance-option-preview">
-                    <img src="main\img\anime.png" alt="Фотореалистичность">
+                    <img src="main\img\3dcartoon.png" alt="3D мультфильм">
                   </div>
-                  <div class="enhance-option-text">Фотореалистичность</div>
-                </div>
-                <div class="enhance-option" data-value="oil painting" data-priority="40">
-                  <div class="enhance-option-preview">
-                    <img src="main\img\anime.png" alt="Масляная живопись">
-                  </div>
-                  <div class="enhance-option-text">Масляная живопись</div>
-                </div>
-                <div class="enhance-option" data-value="cinematic lighting" data-priority="50">
-                  <div class="enhance-option-preview">
-                    <img src="main\img\anime.png" alt="Кинематографическое освещение">
-                  </div>
-                  <div class="enhance-option-text">Кинематографическое освещение</div>
+                  <div class="enhance-option-text">3D мультфильм</div>
                 </div>
               </div>
               <button id="resetEnhanceBtn" class="reset-enhance-btn">Сбросить</button>
