--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link rel="icon" href="main/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="main/styles.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AI Image Generator</title>
+  <title>Image Generator - Flux Schnell</title>
 </head>
 <body>
   <div class="container">
@@ -117,6 +117,7 @@
 <script src="main/script.js"></script>
 </body>
 </html>
+
 
 
 
